--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Quadrado Mágico</title>
 </head>
 <body>
@@ -26,5 +27,6 @@
     </table>
     <button onclick="verificarQuadradoMagico()">Verificar</button>
 </div>
+<script src="./magicSquare.js"></script>
 </body>
 </html>
