--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <div id="game-container">
+    <h2 class="gameTitle">
+        Quadrado Mágico
+    </h2>
     <table id="quadradoMagico">
         <tr>
             <td contenteditable="true"></td>
